--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,4 @@
 FROM nginx:1.22.1
-COPY nginx.conf /etc/nginx/templates/default.conf.template
+RUN mkdir -p /var/html/static /var/html/media
+# Из conf.d подсасываются все конфиги
+COPY nginx.conf /etc/nginx/conf.d/default.conf
