--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,36 @@
 server {
-  listen 80;
-  index index.html;
+    listen 80;
+    server_name localhost;
 
-  location / {
-    alias /static/;
-    try_files $uri $uri/ /index.html;
-  }
+    # Корень фронтенда
+    root /var/html/static;
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    location /static/ {
+        alias /var/html/static/;
+    }
+
+    # Медиафайлы
+    location /media/ {
+        alias /var/html/media/;
+    }
+
+    # API и админка
+    location /api/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
