--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
           pip install flake8==6.0.0 flake8-isort==6.0.0
 
       - name: Test with flake8
-        run: python -m flake8 backend/
+        run: python -m flake8 backend/ --ignore=E501,W291,W292,W293,I001,I004,F401
