--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,3 +107,28 @@ jobs:
           source: "docker-compose.production.yml"
           target: "kittygram/"
 
+      - name: Executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd kittygram
+            # Создаём .env на сервере
+            cat > .env <<EOF
+DB_ENGINE=django.db.backends.postgresql
+POSTGRES_DB=kittygram
+POSTGRES_USER=kittygram_user
+POSTGRES_PASSWORD=kittygram_password
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+EOF
+            # Выполняем деплой
+            docker compose -f docker-compose.production.yml pull
+            docker compose -f docker-compose.production.yml down
+            docker compose -f docker-compose.production.yml up -d
+            sleep 10
+            # Выполняем миграции и сбор статики (вдруг entrypoint не сработал)
+            # docker compose -f docker-compose.production.yml exec -T backend python manage.py migrate --noinput
+            # docker compose -f docker-compose.production.yml exec -T backend python manage.py collectstatic --noinput
