--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,4 +122,14 @@ jobs:
             docker compose -f docker-compose.production.yml up -d
             sleep 10
       
-      
+  telegram-notify:
+    runs-on: ubuntu-latest
+    needs: auto_tests
+    if: success()
+    steps:
+      - name: Send Telegram notification
+        uses: appleboy/telegram-action@v1.0.3
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: "✅ Deploy Kittygram успешно завершён!\n🔗 http://${{ secrets.SSH_HOST }}"
