--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,7 +124,7 @@ jobs:
       
   telegram-notify:
     runs-on: ubuntu-latest
-    needs: auto_tests
+#    needs: auto_tests
     if: success()
     steps:
       - name: Send Telegram notification
