--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,11 +121,30 @@ jobs:
             docker compose -f docker-compose.production.yml down
             docker compose -f docker-compose.production.yml up -d
             sleep 10
-      
+  
+  auto_tests:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install test dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests pytest pyyaml
+
+      - name: Run API and DockerHub tests
+        run: pytest
+
   telegram-notify:
     runs-on: ubuntu-latest
-#    needs: auto_tests
-    needs: deploy
+    needs: auto_tests
     if: success()
     steps:
       - name: Send Telegram notification
