--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           pip install flake8==6.0.0 flake8-isort==6.0.0
 
       - name: Test with flake8
-        run: python -m flake8 backend/ --ignore=E501,W291,W292,W293,I001,I004,F401,E123,E301
+        run: python -m flake8 backend/ --ignore=E501,W291,W292,W293,I001,I003,I004,F401,E123,E301
 
   build_and_push_backend:
     name: Push Docker image to DockerHub (backend)
